# flake-templates

./: LICENSE  ReadMe.org  flake.nix
C/: flake.nix
Cpp/: flake.nix
Cpp/CMake/: .gitignore  CMakeLists.txt  flake.nix
Cpp/CMake/lib/myLib/: myLib.cpp
Cpp/CMake/src/: CMakeLists.txt
Cpp/basic/: flake.nix
Cpp/src/: main.C
Cpp/wasm/: .clang-format  .clangd  .dir-locals.el  .gitignore  CMakeLists.txt  ReadMe.org  flake.nix
Cpp/wasm/html/: hello.js  index.html
Cpp/wasm/lib/: CMakeLists.txt
Cpp/wasm/lib/myLib/: CMakeLists.txt
Cpp/wasm/src/: main.cpp
Csharp/: flake.nix
Elm/: default.nix  elm.json  flake.nix
Hakyll/: flake.nix  my-site.cabal
Hakyll/hakyll-init/: flake.nix
Haskell/: CHANGELOG.md  HaskellNixTemplate.cabal
Haskell/Haskell/: .dir-locals.el  HaskellNixTemplate.cabal  flake.nix
Haskell/Haskell/nix/: aarch64.nix  arm7.nix  docker.nix  packages.nix  raspberryPi.nix  windows.nix
Haskell/Haskell2Flake/: flake.nix
Haskell/Haskell8-10-7/: HaskellNixTemplate.cabal  README.org  flake.nix
Haskell/HaskellNew/: flake.nix
Haskell/HaskellStable/: HaskellNixTemplate.cabal  flake.nix
Javascript/basic/: flake.nix
LaTeX/: flake.nix
LaTeX/src/: main.tex
PureScript/: .dir-locals.el  flake.nix  package-lock.json  package.json
PureScript/public/: dev.html  dev.js  index.html
Python/: ReadMe.org  flake.nix
Python/devshell/: flake.nix
basic/: flake.nix
latex/: .gitignore  flake.nix
latex/src/: main.tex
rust/: flake.nix
