cabal-version:      2.4
name:               HaskellNixTemplate
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             James Leslie
maintainer:         jamesleslie@posteo.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.org

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base ^>=4.14.1.0

executable HaskellNixTemplate
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
